# cookiejack

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
browser-extensions/chrome/: README.md  manifest.json
browser-extensions/chrome/src/: background.html  options.html
browser-extensions/chrome/src/css/: options.css
browser-extensions/chrome/src/js/: cookie_injector.js  options.js
browser-extensions/firefox/: .gitignore  README.md  manifest.json
browser-extensions/firefox/src/: options.html
browser-extensions/firefox/src/js/: cookie_injector.js  options.js
cookiejack/: __init__.py
data/: cookie.py
listener/: printer.py  queuer.py
server/: injector_factory.py  injector_protocol.py  websocket.py
sniff/: cookies.py
src/cookiejack/cli/: __init__.py
src/cookiejack/listener/: ilistener.py  printer.py  queuer.py
src/cookiejack/pid/: manager.py
src/cookiejack/server/: injector_factory.py  injector_protocol.py  websocket.py
src/cookiejack/sniff/: cookies.py
src/cookiejack/validator/: __init__.py
validator/: __init__.py
